// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apis/StyleSheet/StyleRegistry resolve with register before RTL, resolves to className 1`] = `
Object {
  "classList": Array [
    "rn-marginRight-zso239",
    "rn-right-1bnbe1j",
    "rn-textAlign-1ff274t",
  ],
  "className": "rn-marginRight-zso239 rn-right-1bnbe1j rn-textAlign-1ff274t",
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve with register, resolves to className 1`] = `
Object {
  "classList": Array [
    "rn-borderTopColor-1gxhl28",
    "rn-borderRightColor-knoah9",
    "rn-borderBottomColor-1ani3fp",
    "rn-borderLeftColor-ribj9x",
    "rn-borderTopWidth-13yce4e",
    "rn-borderRightWidth-fnigne",
    "rn-borderBottomWidth-ndvcnb",
    "rn-borderLeftWidth-gxnn5r",
    "rn-left-1tsx3h3",
    "rn-pointerEvents-ah5dr5",
    "rn-position-u8s1d",
    "rn-width-b8lwoo",
  ],
  "className": "rn-borderTopColor-1gxhl28 rn-borderRightColor-knoah9 rn-borderBottomColor-1ani3fp rn-borderLeftColor-ribj9x rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-left-1tsx3h3 rn-pointerEvents-ah5dr5 rn-position-u8s1d rn-width-b8lwoo",
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve with register, resolves to className 2`] = `
Object {
  "classList": Array [
    "rn-borderTopColor-1gxhl28",
    "rn-borderRightColor-knoah9",
    "rn-borderBottomColor-1ani3fp",
    "rn-borderLeftColor-ribj9x",
    "rn-borderTopWidth-13yce4e",
    "rn-borderRightWidth-fnigne",
    "rn-borderBottomWidth-ndvcnb",
    "rn-borderLeftWidth-gxnn5r",
    "rn-left-1tsx3h3",
    "rn-pointerEvents-ah5dr5",
    "rn-position-u8s1d",
    "rn-width-l0gwng",
  ],
  "className": "rn-borderTopColor-1gxhl28 rn-borderRightColor-knoah9 rn-borderBottomColor-1ani3fp rn-borderLeftColor-ribj9x rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-left-1tsx3h3 rn-pointerEvents-ah5dr5 rn-position-u8s1d rn-width-l0gwng",
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve with register, resolves to className 3`] = `
Object {
  "classList": Array [
    "rn-borderTopColor-1gxhl28",
    "rn-borderRightColor-knoah9",
    "rn-borderBottomColor-1ani3fp",
    "rn-borderLeftColor-ribj9x",
    "rn-borderTopWidth-13yce4e",
    "rn-borderRightWidth-fnigne",
    "rn-borderBottomWidth-ndvcnb",
    "rn-borderLeftWidth-gxnn5r",
    "rn-left-1tsx3h3",
    "rn-pointerEvents-ah5dr5",
    "rn-position-u8s1d",
    "rn-width-b8lwoo",
  ],
  "className": "rn-borderTopColor-1gxhl28 rn-borderRightColor-knoah9 rn-borderBottomColor-1ani3fp rn-borderLeftColor-ribj9x rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-left-1tsx3h3 rn-pointerEvents-ah5dr5 rn-position-u8s1d rn-width-b8lwoo",
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve with register, resolves to mixed 1`] = `
Object {
  "classList": Array [
    "rn-left-1tsx3h3",
    "rn-pointerEvents-ah5dr5",
    "rn-position-u8s1d",
  ],
  "className": "rn-left-1tsx3h3 rn-pointerEvents-ah5dr5 rn-position-u8s1d",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "width": "100px",
  },
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve with register, resolves to mixed 2`] = `
Object {
  "classList": Array [
    "rn-left-1tsx3h3",
    "rn-pointerEvents-ah5dr5",
    "rn-position-u8s1d",
    "rn-width-l0gwng",
  ],
  "className": "rn-left-1tsx3h3 rn-pointerEvents-ah5dr5 rn-position-u8s1d rn-width-l0gwng",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
  },
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve with register, resolves to mixed 3`] = `
Object {
  "classList": Array [
    "rn-left-1tsx3h3",
    "rn-pointerEvents-ah5dr5",
    "rn-position-u8s1d",
  ],
  "className": "rn-left-1tsx3h3 rn-pointerEvents-ah5dr5 rn-position-u8s1d",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "width": "100px",
  },
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve without register, resolves to inline styles 1`] = `
Object {
  "classList": Array [
    "rn-pointerEvents-ah5dr5",
  ],
  "className": "rn-pointerEvents-ah5dr5",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "50px",
    "position": "absolute",
    "width": "100px",
  },
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve without register, resolves to inline styles 2`] = `
Object {
  "classList": Array [
    "rn-pointerEvents-ah5dr5",
  ],
  "className": "rn-pointerEvents-ah5dr5",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "50px",
    "position": "absolute",
    "width": "200px",
  },
}
`;

exports[`apis/StyleSheet/StyleRegistry resolve without register, resolves to inline styles 3`] = `
Object {
  "classList": Array [
    "rn-pointerEvents-ah5dr5",
  ],
  "className": "rn-pointerEvents-ah5dr5",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "50px",
    "position": "absolute",
    "width": "100px",
  },
}
`;

exports[`apis/StyleSheet/StyleRegistry resolveStateful next class names have priority over current inline styles 1`] = `
Object {
  "className": "rn-opacity-6dt33c",
  "style": Object {
    "opacity": "",
  },
}
`;

exports[`apis/StyleSheet/StyleRegistry resolveStateful next inline styles have priority over current inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "WebkitTransform": "scale(2)",
    "opacity": 1,
    "transform": "scale(2)",
  },
}
`;

exports[`apis/StyleSheet/StyleRegistry resolveStateful preserves unrelated class names 1`] = `
Object {
  "className": "unknown-class-1 unknown-class-2",
  "style": Object {},
}
`;

exports[`apis/StyleSheet/StyleRegistry resolveStateful preserves unrelated inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "fontSize": "20px",
    "opacity": 1,
  },
}
`;
